# MovieRecommender

./: Jakube  app.js  app2.js  enhanced_index_builder.py  index.html  index2.html  main-bckup.py  main-fast.py  main.py  movie_vectorizer.py  requirements.txt  style.css  style2.css
cpp/: CMakeLists.txt  bindings.cpp  jakubelib.h  test_main.cpp
